[project]
name = "article-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "hanlp>=2.1.1",
    "plotly>=6.0.1",
    "pymongo>=4.12.0",
    "streamlit>=1.44.1",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
